--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=C Engineer: Completed
-author=m0bile btw
-support=https://github.com/m0bilebtw/c-engineer-completed
-description=C Engineer announces when you complete an achievement
-tags=c,engineer,youtube,completed,sound
-plugins=com.github.m0bilebtw.CEngineerCompletedPlugin
+displayName=Trailblaizer achievement jingle
+author=Ironic_Memes
+support=https://github.com/ironicmemes/trailblazerjingle
+description=The jingle from Leagues II: Trailblazer plays when you complete an achievement
+tags=leagues,trailblazer,collection,log,stats,levels,quests,diary,announce
+plugins=com.github.ironicmemes.JinglePlugin
